--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/fooddelivery?createDatabaseIfN
 spring.datasource.username=root
 spring.datasource.password=
 
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+#Used for devolopment proposals
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=3
+spring.datasource.hikari.idle-timeout=10000
