--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,13 @@ spring.datasource.password=
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=update
 
+spring.flyway.locations=classpath:db/migration,classpath:db/testdata
+
+#Create the schema scripts and write on ddl.sql file
+
+spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
