Adding a property to return error for unknown properties on request body messages.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.password=
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=update
 
+spring.jackson.deserialization.fail-on-unknown-properties=true
+
 spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 
 #Create the schema scripts and write on ddl.sql file
