Adding property to return a exception for ignored properties sent on request body messages.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=
 #spring.jpa.hibernate.ddl-auto=update
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
-
+spring.jackson.deserialization.fail-on-ignored-properties=true
 spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 
 #Create the schema scripts and write on ddl.sql file
