--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.datasource.password=
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.jackson.deserialization.fail-on-ignored-properties=true
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
+
 spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 
 #Create the schema scripts and write on ddl.sql file
