--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
 		<java.version>16</java.version>
 		<modelmapper.version>2.4.1</modelmapper.version>
 		<squiggly.version>1.3.18</squiggly.version>
+		<jasperreports.version>6.17.0</jasperreports.version>
+		<jasperreports-functions.version>6.17.0</jasperreports-functions.version>
+
 	</properties>
 	<dependencies>
 		<dependency>
@@ -31,7 +34,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>${jasperreports.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports-functions</artifactId>
+			<version>${jasperreports-functions.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
