--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/fooddelivery?createDatabaseIfN
 spring.datasource.username=root
 spring.datasource.password=
 
-#Used for devolopment proposals
+#Used for development proposals
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=update
 
@@ -24,3 +24,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.minimum-idle=3
 spring.datasource.hikari.idle-timeout=10000
+
+fooddelivery.storage.local.photos-directory=
+
+#spring.servlet.multipart.max-file-size=50MB
+#spring.servlet.multipart.max-request-size=50MB
