--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<squiggly.version>1.3.18</squiggly.version>
 		<jasperreports.version>6.17.0</jasperreports.version>
 		<jasperreports-functions.version>6.17.0</jasperreports-functions.version>
-
+		<aws-java-sdk-s3.version>1.12.52</aws-java-sdk-s3.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -62,7 +62,11 @@
 			<version>${squiggly.version}</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>${aws-java-sdk-s3.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
