--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/fooddelivery?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.password=
 
 #Used for development proposals
 #spring.jpa.generate-ddl=true
@@ -25,7 +25,16 @@ spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.minimum-idle=3
 spring.datasource.hikari.idle-timeout=10000
 
-fooddelivery.storage.local.photos-directory=
+fooddelivery.storage.local.photos-directory=/home/filipe/Documentos/Development/uploads/
+
+
+#fooddelivery.storage.s3.id-access-key=
+#fooddelivery.storage.s3.secret-access-key=
+fooddelivery.storage.s3.bucket=fooddelivery-filipearn
+fooddelivery.storage.s3.region=us-east-1
+fooddelivery.storage.s3.photos-directory=uploads
+
+fooddelivery.storage.type=local
 
 #spring.servlet.multipart.max-file-size=50MB
 #spring.servlet.multipart.max-request-size=50MB
