--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<jasperreports.version>6.17.0</jasperreports.version>
 		<jasperreports-functions.version>6.17.0</jasperreports-functions.version>
 		<aws-java-sdk-s3.version>1.12.52</aws-java-sdk-s3.version>
+		<springfox.version>2.9.2</springfox.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -56,6 +57,24 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 			<version>2.5.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>${springfox.version}</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>${springfox.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-bean-validators</artifactId>
+			<version>${springfox.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
