--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,10 @@
 			<artifactId>spring-security-oauth2</artifactId>
 			<version>${spring-secutiry-auth2.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 
 	</dependencies>
 
