--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,10 @@
 		<springfox.version>2.9.2</springfox.version>
 		<logback-ext-loggly.version>0.1.5</logback-ext-loggly.version>
 		<oauth2-oidc-sdk.version>6.21.2</oauth2-oidc-sdk.version>
-		<spring-secutiry-auth2.version>2.3.7.RELEASE</spring-secutiry-auth2.version>
+		<spring-secutiry-auth2.version>2.3.8.RELEASE</spring-secutiry-auth2.version>
 		<spring-security-jwt.version>1.0.11.RELEASE</spring-security-jwt.version>
+		<dockerfile-maven.version>1.4.13</dockerfile-maven.version>
+<!--		<docker-client.version>8.16.0</docker-client.version>-->
 	</properties>
 	<dependencies>
 		<dependency>
@@ -81,6 +83,14 @@
 					<artifactId>spring-plugin-core</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-data-redis</artifactId>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
 		<dependency>
@@ -199,6 +209,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.spotify</groupId>-->
+<!--			<artifactId>docker-client</artifactId>-->
+<!--			<classifier>shaded</classifier>-->
+<!--			<version>${docker-client.version}</version>-->
+<!--		</dependency>-->
 
 	</dependencies>
 
@@ -227,5 +243,37 @@
 
 		</plugins>
 	</build>
+
+	<profiles>
+		<profile>
+			<id>docker</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>com.spotify</groupId>
+						<artifactId>dockerfile-maven-plugin</artifactId>
+						<version>${dockerfile-maven.version}</version>
+						<executions>
+							<execution>
+								<id>default</id>
+								<goals>
+									<goal>build</goal>
+									<goal>push</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<repository>fooddelivery-api</repository>
+							<tag>${project.version}</tag>
+							<buildArgs>
+								<JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
+							</buildArgs>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 
 </project>
